<resources>
    <string name="app_name">store</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="app_logo">App logo</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="our_locations">Our locations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="remove">Remove</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="green_checkmark">Green checkmark</string>
    <string name="payment_successful">Payment successful</string>
</resources>