<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:name="com.example.store.fragments.CartFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonPay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="LinearLayoutManager"
            tools:context=".fragments.CartFragment"
            tools:listitem="@layout/fragment_cart" />

        <Button
            android:id="@+id/buttonPay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/proceed_to_payment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:visibility="gone" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/checkmark"
            android:layout_width="256dp"
            android:layout_height="256dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="128dp"
            app:srcCompat="@drawable/ic_baseline_done_24"
            app:tint="@android:color/holo_green_dark"
            android:visibility="gone"
            android:contentDescription="@string/green_checkmark"/>

        <TextView
            android:id="@+id/textSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_successful"
            style="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="@+id/checkmark"
            app:layout_constraintStart_toStartOf="@+id/checkmark"
            app:layout_constraintTop_toBottomOf="@+id/checkmark"
            android:visibility="gone"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>